Ignore GSASL_API function decorator.

--- a/doc/reference/Makefile.am
+++ b/doc/reference/Makefile.am
@@ -25,7 +25,7 @@ SCANGOBJ_OPTIONS=
 
 # Extra options to supply to gtkdoc-scan.
 # e.g. SCAN_OPTIONS=--deprecated-guards="GTK_DISABLE_DEPRECATED"
-SCAN_OPTIONS=--deprecated-guards="GSASL_COMPAT_H"
+SCAN_OPTIONS=--deprecated-guards=GSASL_COMPAT_H --ignore-decorators=GSASL_API
 
 # Extra options to supply to gtkdoc-mkdb.
 # e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
