--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -85,6 +85,7 @@ gdoc_MANS += man/gsasl_init.3
 gdoc_MANS += man/gsasl_client_mechlist.3
 gdoc_MANS += man/gsasl_server_mechlist.3
 gdoc_MANS += man/gsasl_simple_getpass.3
+gdoc_MANS += man/gsasl_mechanism_name.3
 gdoc_MANS += man/gsasl_client_listmech.3
 gdoc_MANS += man/gsasl_server_listmech.3
 gdoc_MANS += man/gsasl_client_step.3
@@ -189,6 +190,7 @@ gdoc_TEXINFOS += texi/free.c.texi
 gdoc_TEXINFOS += texi/init.c.texi
 gdoc_TEXINFOS += texi/listmech.c.texi
 gdoc_TEXINFOS += texi/md5pwd.c.texi
+gdoc_TEXINFOS += texi/mechname.c.texi
 gdoc_TEXINFOS += texi/obsolete.c.texi
 gdoc_TEXINFOS += texi/property.c.texi
 gdoc_TEXINFOS += texi/register.c.texi
@@ -219,6 +221,7 @@ gdoc_TEXINFOS += texi/gsasl_init.texi
 gdoc_TEXINFOS += texi/gsasl_client_mechlist.texi
 gdoc_TEXINFOS += texi/gsasl_server_mechlist.texi
 gdoc_TEXINFOS += texi/gsasl_simple_getpass.texi
+gdoc_TEXINFOS += texi/gsasl_mechanism_name.texi
 gdoc_TEXINFOS += texi/gsasl_client_listmech.texi
 gdoc_TEXINFOS += texi/gsasl_server_listmech.texi
 gdoc_TEXINFOS += texi/gsasl_client_step.texi
