No need to check for sys/poll.h and errno.h.

--- a/configure.ac
+++ b/configure.ac
@@ -39,7 +39,7 @@ AM_GNU_GETTEXT(external)
 AM_GNU_GETTEXT_VERSION(0.17)
 
 # Checks for header files.
-AC_CHECK_HEADERS(sys/poll.h netdb.h pwd.h errno.h)
+AC_CHECK_HEADERS(netdb.h pwd.h)
 
 # Checks for library functions.
 AC_SEARCH_LIBS(socket, socket)
