Don't check gnulib getdelim for thread unsafety: it is thread safe.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -31,7 +31,7 @@ TESTS_ENVIRONMENT = SHISHI_KEYS=$(srcdir)/gssapi.key \
 	SHISHI_CONFIG=ignore-this-warning \
 	SHISHI_HOME=ignore-this-warning \
 	SHISHI_USER=ignore-this-warning \
-	THREADSAFETY_FILES=`ls $(top_srcdir)/lib/*/*.c | grep -v lib/gl/vasnprintf.c` \
+	THREADSAFETY_FILES=`ls $(top_srcdir)/lib/*/*.c | grep -v -e lib/gl/vasnprintf.c -e lib/gl/getdelim.c` \
 	MD5FILE=$(srcdir)/cram-md5.pwd \
 	$(VALGRIND)
 
