Revert CFLAGS, causes ./configure to be run with -Werror which isn't supported.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,5 +21,4 @@ SUBDIRS = po gl lib src examples gltests tests doc
 EXTRA_DIST = cfg.mk maint.mk .clcopying
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete \
-	CFLAGS="-Werror -Wall -Wno-pointer-sign -Wno-deprecated-declarations"
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete
