Do distcheck with -Werror.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,4 +21,5 @@ SUBDIRS = po gl lib src examples gltests tests doc
 EXTRA_DIST = cfg.mk maint.mk .clcopying
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --disable-obsolete \
+	WARN_CFLAGS="-Wall -Werror"
