--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -19,6 +19,7 @@
 # MA 02110-1301, USA.
 
 ACLOCAL_AMFLAGS = -I m4 -I gl/m4
+DISTCHECK_CONFIGURE_FLAGS = WARN_CFLAGS="-Wall -Werror"
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libgsasl.pc
