--- a/lib/digest-md5/Makefile.am
+++ b/lib/digest-md5/Makefile.am
@@ -18,8 +18,8 @@
 # Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 
-AM_CPPFLAGS = -I$(srcdir)/../src -I../src \
-	-I$(srcdir)/../gl -I../gl
+AM_CFLAGS = $(WARN_CFLAGS)
+AM_CPPFLAGS = -I$(srcdir)/../src -I../src -I$(srcdir)/../gl -I../gl
 
 EXTRA_DIST = README
 
