--- a/lib/GNUmakefile
+++ b/lib/GNUmakefile
@@ -71,16 +71,20 @@ ifeq ($(_have-git-version-gen)0,yes$(MAKELEVEL))
           # warn when installing a version string that is out of date; the user
           # should run 'autoreconf' (or something like 'make distcheck') to
           # fix the version, 'make all' to propagate it, then 'make install'.
-          $(info WARNING: version string $(VERSION) is out of date; run autoreconf -f to fix it)
+          $(info WARNING: version string $(VERSION) is out of date;)
+          $(info run '$(MAKE) version' to fix it)
         else
           $(info INFO: running autoreconf for new version string: $(_curr-ver))
-          _dummy := $(shell cd $(srcdir) && rm -rf autom4te.cache .version \
-            && $(_autoreconf))
+          _dummy := $(shell $(MAKE) $(AM_MAKEFLAGS) version)
         endif
       endif
     endif
   endif
 endif
+
+.PHONY: version
+version:
+	cd $(srcdir) && rm -rf autom4te.cache .version && $(_autoreconf)
 
 else
 
