--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -84,6 +84,7 @@ gdoc_MANS += man/gsasl_md5.3
 gdoc_MANS += man/gsasl_hmac_md5.3
 gdoc_MANS += man/gsasl_done.3
 gdoc_MANS += man/gsasl_strerror.3
+gdoc_MANS += man/gsasl_strerror_name.3
 gdoc_MANS += man/gsasl_free.3
 gdoc_MANS += man/gsasl_init.3
 gdoc_MANS += man/gsasl_client_mechlist.3
@@ -220,6 +221,7 @@ gdoc_TEXINFOS += texi/gsasl_md5.texi
 gdoc_TEXINFOS += texi/gsasl_hmac_md5.texi
 gdoc_TEXINFOS += texi/gsasl_done.texi
 gdoc_TEXINFOS += texi/gsasl_strerror.texi
+gdoc_TEXINFOS += texi/gsasl_strerror_name.texi
 gdoc_TEXINFOS += texi/gsasl_free.texi
 gdoc_TEXINFOS += texi/gsasl_init.texi
 gdoc_TEXINFOS += texi/gsasl_client_mechlist.texi
